// <auto-generated />
using System;
using KirayaDoor.Api.Data;
using Microsoft.EntityFrameworkCore;
using Microsoft.EntityFrameworkCore.Infrastructure;
using Microsoft.EntityFrameworkCore.Metadata;
using Microsoft.EntityFrameworkCore.Migrations;
using Microsoft.EntityFrameworkCore.Storage.ValueConversion;

#nullable disable

namespace KirayaDoor.Api.Migrations
{
    [DbContext(typeof(ApplicationDbContext))]
    [Migration("20260222154258_AddPropertyManagementTables")]
    partial class AddPropertyManagementTables
    {
        /// <inheritdoc />
        protected override void BuildTargetModel(ModelBuilder modelBuilder)
        {
#pragma warning disable 612, 618
            modelBuilder
                .HasAnnotation("ProductVersion", "10.0.3")
                .HasAnnotation("Relational:MaxIdentifierLength", 128);

            SqlServerModelBuilderExtensions.UseIdentityColumns(modelBuilder);

            modelBuilder.Entity("KirayaDoor.Api.Data.Entities.Address", b =>
                {
                    b.Property<int>("AddressId")
                        .ValueGeneratedOnAdd()
                        .HasColumnType("int");

                    SqlServerPropertyBuilderExtensions.UseIdentityColumn(b.Property<int>("AddressId"));

                    b.Property<string>("AddressText")
                        .IsRequired()
                        .HasMaxLength(500)
                        .HasColumnType("nvarchar(500)");

                    b.Property<string>("Location")
                        .HasMaxLength(100)
                        .HasColumnType("nvarchar(100)");

                    b.HasKey("AddressId");

                    b.ToTable("Addresses");
                });

            modelBuilder.Entity("KirayaDoor.Api.Data.Entities.ExpenseCycle", b =>
                {
                    b.Property<int>("ExpenseCycleId")
                        .ValueGeneratedOnAdd()
                        .HasColumnType("int");

                    SqlServerPropertyBuilderExtensions.UseIdentityColumn(b.Property<int>("ExpenseCycleId"));

                    b.Property<string>("ExpenseCycleName")
                        .IsRequired()
                        .HasMaxLength(50)
                        .HasColumnType("nvarchar(50)");

                    b.HasKey("ExpenseCycleId");

                    b.ToTable("ExpenseCycles");

                    b.HasData(
                        new
                        {
                            ExpenseCycleId = 1,
                            ExpenseCycleName = "OneTime"
                        },
                        new
                        {
                            ExpenseCycleId = 2,
                            ExpenseCycleName = "Month"
                        },
                        new
                        {
                            ExpenseCycleId = 3,
                            ExpenseCycleName = "Quarter"
                        },
                        new
                        {
                            ExpenseCycleId = 4,
                            ExpenseCycleName = "HalfYear"
                        },
                        new
                        {
                            ExpenseCycleId = 5,
                            ExpenseCycleName = "Annual"
                        });
                });

            modelBuilder.Entity("KirayaDoor.Api.Data.Entities.ExpenseType", b =>
                {
                    b.Property<int>("ExpenseTypeId")
                        .ValueGeneratedOnAdd()
                        .HasColumnType("int");

                    SqlServerPropertyBuilderExtensions.UseIdentityColumn(b.Property<int>("ExpenseTypeId"));

                    b.Property<string>("ExpenseTypeName")
                        .IsRequired()
                        .HasMaxLength(50)
                        .HasColumnType("nvarchar(50)");

                    b.HasKey("ExpenseTypeId");

                    b.ToTable("ExpenseTypes");

                    b.HasData(
                        new
                        {
                            ExpenseTypeId = 1,
                            ExpenseTypeName = "Rent"
                        },
                        new
                        {
                            ExpenseTypeId = 2,
                            ExpenseTypeName = "SecurityDeposit"
                        },
                        new
                        {
                            ExpenseTypeId = 3,
                            ExpenseTypeName = "Electricity"
                        },
                        new
                        {
                            ExpenseTypeId = 4,
                            ExpenseTypeName = "Water"
                        },
                        new
                        {
                            ExpenseTypeId = 100,
                            ExpenseTypeName = "Others"
                        });
                });

            modelBuilder.Entity("KirayaDoor.Api.Data.Entities.PaidExpense", b =>
                {
                    b.Property<int>("PaidExpenseId")
                        .ValueGeneratedOnAdd()
                        .HasColumnType("int");

                    SqlServerPropertyBuilderExtensions.UseIdentityColumn(b.Property<int>("PaidExpenseId"));

                    b.Property<string>("Comments")
                        .HasMaxLength(500)
                        .HasColumnType("nvarchar(500)");

                    b.Property<decimal>("PaymentAmount")
                        .HasColumnType("decimal(18,2)");

                    b.Property<DateTime>("PaymentDate")
                        .HasColumnType("datetime2");

                    b.Property<int>("TenantId")
                        .HasColumnType("int");

                    b.HasKey("PaidExpenseId");

                    b.HasIndex("TenantId");

                    b.ToTable("PaidExpenses");
                });

            modelBuilder.Entity("KirayaDoor.Api.Data.Entities.Property", b =>
                {
                    b.Property<int>("PropertyId")
                        .ValueGeneratedOnAdd()
                        .HasColumnType("int");

                    SqlServerPropertyBuilderExtensions.UseIdentityColumn(b.Property<int>("PropertyId"));

                    b.Property<int>("AddressId")
                        .HasColumnType("int");

                    b.Property<int>("OwnerId")
                        .HasColumnType("int");

                    b.Property<string>("PropertyName")
                        .IsRequired()
                        .HasMaxLength(200)
                        .HasColumnType("nvarchar(200)");

                    b.Property<int>("UnitCount")
                        .HasColumnType("int");

                    b.HasKey("PropertyId");

                    b.HasIndex("AddressId");

                    b.HasIndex("OwnerId");

                    b.ToTable("Properties");
                });

            modelBuilder.Entity("KirayaDoor.Api.Data.Entities.Tenant", b =>
                {
                    b.Property<int>("TenantId")
                        .ValueGeneratedOnAdd()
                        .HasColumnType("int");

                    SqlServerPropertyBuilderExtensions.UseIdentityColumn(b.Property<int>("TenantId"));

                    b.Property<bool>("IsActive")
                        .HasColumnType("bit");

                    b.Property<string>("TenantContactNumber")
                        .IsRequired()
                        .HasMaxLength(15)
                        .HasColumnType("nvarchar(15)");

                    b.Property<string>("TenantName")
                        .IsRequired()
                        .HasMaxLength(100)
                        .HasColumnType("nvarchar(100)");

                    b.Property<int>("UnitId")
                        .HasColumnType("int");

                    b.HasKey("TenantId");

                    b.HasIndex("UnitId");

                    b.ToTable("Tenants");
                });

            modelBuilder.Entity("KirayaDoor.Api.Data.Entities.TenantExpense", b =>
                {
                    b.Property<int>("TenantExpenseId")
                        .ValueGeneratedOnAdd()
                        .HasColumnType("int");

                    SqlServerPropertyBuilderExtensions.UseIdentityColumn(b.Property<int>("TenantExpenseId"));

                    b.Property<string>("Comments")
                        .HasMaxLength(500)
                        .HasColumnType("nvarchar(500)");

                    b.Property<decimal>("TenantExpenseAmount")
                        .HasColumnType("decimal(18,2)");

                    b.Property<int>("TenantExpenseCycleId")
                        .HasColumnType("int");

                    b.Property<DateTime>("TenantExpenseStartDate")
                        .HasColumnType("datetime2");

                    b.Property<int>("TenantExpenseTypeId")
                        .HasColumnType("int");

                    b.Property<int>("TenantId")
                        .HasColumnType("int");

                    b.HasKey("TenantExpenseId");

                    b.HasIndex("TenantExpenseCycleId");

                    b.HasIndex("TenantExpenseTypeId");

                    b.HasIndex("TenantId");

                    b.ToTable("TenantExpenses");
                });

            modelBuilder.Entity("KirayaDoor.Api.Data.Entities.Unit", b =>
                {
                    b.Property<int>("UnitId")
                        .ValueGeneratedOnAdd()
                        .HasColumnType("int");

                    SqlServerPropertyBuilderExtensions.UseIdentityColumn(b.Property<int>("UnitId"));

                    b.Property<int>("PropertyId")
                        .HasColumnType("int");

                    b.Property<string>("UnitName")
                        .IsRequired()
                        .HasMaxLength(100)
                        .HasColumnType("nvarchar(100)");

                    b.HasKey("UnitId");

                    b.HasIndex("PropertyId");

                    b.ToTable("Units");
                });

            modelBuilder.Entity("KirayaDoor.Api.Data.Entities.User", b =>
                {
                    b.Property<int>("UserId")
                        .ValueGeneratedOnAdd()
                        .HasColumnType("int");

                    SqlServerPropertyBuilderExtensions.UseIdentityColumn(b.Property<int>("UserId"));

                    b.Property<string>("EmailAddress")
                        .HasMaxLength(100)
                        .HasColumnType("nvarchar(100)");

                    b.Property<string>("MobileNumber")
                        .IsRequired()
                        .HasMaxLength(15)
                        .HasColumnType("nvarchar(15)");

                    b.Property<string>("PreferredLanguage")
                        .IsRequired()
                        .HasMaxLength(2)
                        .HasColumnType("nvarchar(2)");

                    b.Property<string>("UserName")
                        .IsRequired()
                        .HasMaxLength(100)
                        .HasColumnType("nvarchar(100)");

                    b.Property<int>("UserTypeId")
                        .HasColumnType("int");

                    b.HasKey("UserId");

                    b.HasIndex("UserTypeId");

                    b.ToTable("Users");
                });

            modelBuilder.Entity("KirayaDoor.Api.Data.Entities.UserType", b =>
                {
                    b.Property<int>("UserTypeId")
                        .ValueGeneratedOnAdd()
                        .HasColumnType("int");

                    SqlServerPropertyBuilderExtensions.UseIdentityColumn(b.Property<int>("UserTypeId"));

                    b.Property<string>("TypeName")
                        .IsRequired()
                        .HasMaxLength(50)
                        .HasColumnType("nvarchar(50)");

                    b.HasKey("UserTypeId");

                    b.ToTable("UserTypes");
                });

            modelBuilder.Entity("KirayaDoor.Api.Data.Entities.PaidExpense", b =>
                {
                    b.HasOne("KirayaDoor.Api.Data.Entities.Tenant", "Tenant")
                        .WithMany("PaidExpenses")
                        .HasForeignKey("TenantId")
                        .OnDelete(DeleteBehavior.Cascade)
                        .IsRequired();

                    b.Navigation("Tenant");
                });

            modelBuilder.Entity("KirayaDoor.Api.Data.Entities.Property", b =>
                {
                    b.HasOne("KirayaDoor.Api.Data.Entities.Address", "Address")
                        .WithMany("Properties")
                        .HasForeignKey("AddressId")
                        .OnDelete(DeleteBehavior.Cascade)
                        .IsRequired();

                    b.HasOne("KirayaDoor.Api.Data.Entities.User", "Owner")
                        .WithMany()
                        .HasForeignKey("OwnerId")
                        .OnDelete(DeleteBehavior.Cascade)
                        .IsRequired();

                    b.Navigation("Address");

                    b.Navigation("Owner");
                });

            modelBuilder.Entity("KirayaDoor.Api.Data.Entities.Tenant", b =>
                {
                    b.HasOne("KirayaDoor.Api.Data.Entities.Unit", "Unit")
                        .WithMany("Tenants")
                        .HasForeignKey("UnitId")
                        .OnDelete(DeleteBehavior.Cascade)
                        .IsRequired();

                    b.Navigation("Unit");
                });

            modelBuilder.Entity("KirayaDoor.Api.Data.Entities.TenantExpense", b =>
                {
                    b.HasOne("KirayaDoor.Api.Data.Entities.ExpenseCycle", "ExpenseCycle")
                        .WithMany()
                        .HasForeignKey("TenantExpenseCycleId")
                        .OnDelete(DeleteBehavior.Cascade)
                        .IsRequired();

                    b.HasOne("KirayaDoor.Api.Data.Entities.ExpenseType", "ExpenseType")
                        .WithMany()
                        .HasForeignKey("TenantExpenseTypeId")
                        .OnDelete(DeleteBehavior.Cascade)
                        .IsRequired();

                    b.HasOne("KirayaDoor.Api.Data.Entities.Tenant", "Tenant")
                        .WithMany("TenantExpenses")
                        .HasForeignKey("TenantId")
                        .OnDelete(DeleteBehavior.Cascade)
                        .IsRequired();

                    b.Navigation("ExpenseCycle");

                    b.Navigation("ExpenseType");

                    b.Navigation("Tenant");
                });

            modelBuilder.Entity("KirayaDoor.Api.Data.Entities.Unit", b =>
                {
                    b.HasOne("KirayaDoor.Api.Data.Entities.Property", "Property")
                        .WithMany("Units")
                        .HasForeignKey("PropertyId")
                        .OnDelete(DeleteBehavior.Cascade)
                        .IsRequired();

                    b.Navigation("Property");
                });

            modelBuilder.Entity("KirayaDoor.Api.Data.Entities.User", b =>
                {
                    b.HasOne("KirayaDoor.Api.Data.Entities.UserType", "UserType")
                        .WithMany()
                        .HasForeignKey("UserTypeId")
                        .OnDelete(DeleteBehavior.Cascade)
                        .IsRequired();

                    b.Navigation("UserType");
                });

            modelBuilder.Entity("KirayaDoor.Api.Data.Entities.Address", b =>
                {
                    b.Navigation("Properties");
                });

            modelBuilder.Entity("KirayaDoor.Api.Data.Entities.Property", b =>
                {
                    b.Navigation("Units");
                });

            modelBuilder.Entity("KirayaDoor.Api.Data.Entities.Tenant", b =>
                {
                    b.Navigation("PaidExpenses");

                    b.Navigation("TenantExpenses");
                });

            modelBuilder.Entity("KirayaDoor.Api.Data.Entities.Unit", b =>
                {
                    b.Navigation("Tenants");
                });
#pragma warning restore 612, 618
        }
    }
}
