erDiagram
    USERTYPES ||--o{ USERS : "categorizes"
    USERS ||--o{ PROPERTIES : "owns"
    
    ADDRESSES ||--o{ PROPERTIES : "locatedAt"
    PROPERTIES ||--o{ UNITS : "contains"
    
    UNITS ||--o{ TENANTS : "hasMany"
    TENANTS ||--o{ TENANTEXPENSES : "has"
    TENANTS ||--o{ PAIDEXPENSES : "has"
    
    EXPENSETYPE ||--o{ TENANTEXPENSES : "categorizes"
    EXPENSETYPE ||--o{ PAIDEXPENSES : "categorizes"
    EXPENSECYCLE ||--o{ TENANTEXPENSES : "defines"

    USERTYPES {
        int UserTypeId PK
        string UserTypeName
    }

    USERS {
        int UserId PK
        string MobileNumber UK
        string EmailAddress
        string UserName
        int UserTypeId FK
        string PreferredLanguage
    }

    ADDRESSES {
        int AddressId PK
        string AddressText
        string Location "optional GPS coords"
    }

    PROPERTIES {
        int PropertyId PK
        string PropertyName
        int UnitCount
        int OwnerId FK "references Users"
        int AddressId FK "references Addresses"
    }

    UNITS {
        int UnitId PK
        string UnitName
        int PropertyId FK "references Properties"
    }

    TENANTS {
        int TenantId PK
        int UnitId FK "references Units"
        string TenantName
        string TenantContactNumber
        bool IsActive
    }

    EXPENSETYPE {
        int ExpenseTypeId PK
        string ExpenseTypeName
    }

    EXPENSECYCLE {
        int ExpenseCycleId PK
        string ExpenseCycleName
    }

    TENANTEXPENSES {
        int TenantExpenseId PK
        int TenantId FK "references Tenants"
        int TenantExpenseTypeId FK "references ExpenseType"
        int TenantExpenseCycleId FK "references ExpenseCycle"
        datetime TenantExpenseStartDate
        decimal TenantExpenseAmount
        string Comments "optional"
    }

    PAIDEXPENSES {
        int PaidExpenseId PK
        int TenantId FK "references Tenants"
        int ExpenseTypeId FK "references ExpenseType"
        datetime PaymentDate
        decimal PaymentAmount
        string Comments "optional"
    }
